--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@clerk/nextjs": "^4.21.1",
     "@clerk/types": "^3.42.0",
-    "@prisma/client": "^4.16.2",
+    "@paralleldrive/cuid2": "^2.2.1",
+    "@prisma/client": "^5.0.0",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "aws-sdk": "^2.1414.0",
     "dayjs": "^1.11.8",
     "next": "^13.4.2",
     "react": "18.2.0",
@@ -41,7 +43,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "prisma": "^4.14.0",
+    "prisma": "^5.0.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.4"
   },
