--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-sdk/s3-presigned-post": "^3.370.0",
     "@clerk/nextjs": "^4.21.1",
     "@clerk/types": "^3.42.0",
     "@paralleldrive/cuid2": "^2.2.1",
@@ -20,7 +21,8 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
-    "aws-sdk": "^2.1414.0",
+    "aws-sdk": "^2.1416.0",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "next": "^13.4.2",
     "react": "18.2.0",
