--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@clerk/nextjs": "^4.21.1",
     "@clerk/types": "^3.42.0",
     "@paralleldrive/cuid2": "^2.2.1",
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.1.0",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.1416.0",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-7118f5dd7-20230705",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
