--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@clerk/nextjs": "^4.21.1",
     "@clerk/types": "^3.42.0",
     "@paralleldrive/cuid2": "^2.2.1",
-    "@prisma/client": "^5.1.0",
+    "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
