--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
