--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/s3-presigned-post": "^3.370.0",
+    "@aws-sdk/s3-request-presigner": "^3.474.0",
     "@clerk/nextjs": "^4.21.1",
     "@clerk/types": "^3.42.0",
     "@paralleldrive/cuid2": "^2.2.1",
