--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/server": "^10.26.0",
     "aws-sdk": "^2.1416.0",
     "axios": "^1.4.0",
+    "bson-objectid": "^2.0.4",
     "dayjs": "^1.11.8",
     "eslint-plugin-react-hooks": "^5.0.0-canary-7118f5dd7-20230705",
     "next": "^13.4.2",
@@ -33,6 +34,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "superjson": "1.12.2",
+    "uniqid": "^5.4.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
