--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.474.0",
     "@aws-sdk/s3-presigned-post": "^3.474.0",
     "@aws-sdk/s3-request-presigner": "^3.474.0",
     "@clerk/nextjs": "^4.21.1",
