--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.474.0",
-    "@aws-sdk/s3-presigned-post": "^3.474.0",
-    "@aws-sdk/s3-request-presigner": "^3.474.0",
+    "@aws-sdk/client-s3": "^3.654.0",
+    "@aws-sdk/s3-presigned-post": "^3.654.0",
+    "@aws-sdk/s3-request-presigner": "^3.654.0",
     "@clerk/nextjs": "^4.21.1",
     "@clerk/types": "^3.42.0",
     "@paralleldrive/cuid2": "^2.2.1",
@@ -34,7 +34,9 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.14.2",
+    "remark-gfm": "^4.0.0",
     "superjson": "1.12.2",
     "uniqid": "^5.4.0",
     "zod": "^3.21.4"
